twerked Devise Views, Day 18 Lesson 1, Added Account Settings to navbar when signed in

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 		<h4> You are now in the member's area </h4>
 	<% else %>
 		<p>
-			<%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-md" %>
+			<%= link_to "Sign in", new_user_session_path, class: "btn btn-info btn-md" %>
 			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-md" %>
 		</p>
 	<% end %>
