--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,11 +1,25 @@
-<%= image_tag @pin.image.url(:medium) %>
-
-<p>
-  <strong>Description:</strong>
-  <%= @pin.description %>
-</p>
-
-<% if @pin.user == current_user %>
-	<%= link_to 'Edit', edit_pin_path(@pin) %> |
-<% end %>
 <%= link_to 'Back', pins_path %>
+
+<div class="row">
+	<div class="col-md-offset-2 col-md-8">
+		<div class="panel panel-default">
+			<div class="panel-heading center">
+				 <%= image_tag @pin.image.url, width: '700'%>
+			</div>
+			<div class="panel-body">
+				<%= @pin.description %><br/>
+				<strong><%= @pin.user.email if @pin.user %></strong><br/>
+			
+				<% if @pin.user == current_user %>
+					 <%= link_to edit_pin_path(@pin) do %>
+                     <span class="glyphicon glyphicon-edit"></span> Edit
+                <% end %>
+
+                <%= link_to @pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                     <span class="glyphicon glyphicon-trash"></span> Delete
+                   <% end %>
+			</div>
+			<% end %>
+		</div>
+	</div>
+</div>
