--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -4,11 +4,11 @@
 	<div class="col-md-offset-2 col-md-8">
 		<div class="panel panel-default">
 			<div class="panel-heading center">
-				 <%= image_tag @pin.image.url, width: '700'%>
+				 <%= image_tag @pin.image.url, width: '500'%>
 			</div>
 			<div class="panel-body">
 				<%= @pin.description %><br/>
-				<strong><%= @pin.user.email if @pin.user %></strong><br/>
+				<%= @pin.user.email if @pin.user %><br/>
 			
 				<% if @pin.user == current_user %>
 					 <%= link_to edit_pin_path(@pin) do %>
