--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,7 +1,9 @@
-<div class="jumbotron center">
-	<h2>Welcome</h2>
+<div class="jumbotron center" >
+	<div class="container-fluid">
+	<h1>Welcome</h1>
 		<p>
 			<%= link_to "Sign in", new_user_session_path, class: "btn btn-info btn-md" %>
 			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-md" %>
 		</p>
+	</div>
 </div>
